deploys/k8s/templates/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - backend:
              service:
                name: api-gateway-service
                port:
                  number: 3000
            path: /api/v1/
            pathType: Prefix
